--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Index.cshtml
@@ -107,109 +107,116 @@
                     <input type="hidden" id="hdnDispatch_Id" name="product_Dispatch.Dispatch_Id" value="@Model.product_Dispatch.Dispatch_Id" />
 
 
-                    <div class="row">
+                    <div class="row" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 0px solid #DDD; padding: 10px; height: 100px;">
 
-                        <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 200px;">
+                        @{
+                            LoginInfo Cookies = new LoginInfo();
+                            Cookies = Utility.Get_Login_User("MyLeoLoginInfo", "MyLeoToken", "Branch_Ids");
+
+                            <input type="hidden" id="hdnBranchIDs" value="@Cookies.Branch_Ids" />
+                        }
+                        @if (Model.product_Dispatch.Branch_Id == 0)
+                        {
+                            <div class="col-md-3">
+
+                                <div class="block">
+                                    <div class="form-group auto-complete">
+                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
+                                        <div id="Branch" class="input-group">
+                                            <input type="text" class="form-control invoice-filter autocomplete-text lookup-text" id="txt_Branch_Name" placeholder="Enter Branch to search" data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
+                                            <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                            <input type="hidden" id="hdn_Branch_Id" name="product_Dispatch.Branch_Id" class="auto-complete-value" />
+                                            <input type="hidden" id="hdnBranchName" class="auto-complete-label" />
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        }
+                        else
+                        {
+                            <input type="hidden" class="form-control input-sm" id="hdn_Branch_Id" name="product_Dispatch.Branch_Id" value="@Model.product_Dispatch.Branch_Id">
+                        }
+
+                        <div class="col-md-3">
 
                             <div class="block">
                                 @{
                                     if (Model.product_Dispatch.SKU != null)
-                                { 
-                                <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Name.</span>
-                                    <input type="text" class="form-control input-sm" name="product_Dispatch.SKU" id="txtSKU" value="@Model.product_Dispatch.SKU" readonly />
-                                </div>
-                                }
-                                else
-                                { 
-                                       <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Name.</span>
-                                 <div class="form-group auto-complete">
-                                <div class="input-group">
+                                    {
+                                        <div class="form-group">
+                                            <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Name.</span>
+                                            <input type="text" class="form-control input-sm" name="product_Dispatch.SKU" id="txtSKU" value="@Model.product_Dispatch.SKU" readonly />
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Name.</span>
+                                        <div class="form-group auto-complete">
+                                            <div class="input-group">
 
-                                    <input type="text" class="form-control color-filter autocomplete-text" id="textSKU" placeholder="Enter SKU to search." value="" data-table="Product_Warehouse" data-col="Product_Invioce_Id,Product_SKU" data-headernames="SKU Code">
-                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                    <input type="hidden" id="txtSKU" name="product_Dispatch.SKU" class="auto-complete-label" />
+                                                <input type="text" class="form-control color-filter autocomplete-text" id="textSKU" placeholder="Enter SKU to search." value="" data-table="Product_Warehouse" data-col="Product_Invioce_Id,Product_SKU" data-headernames="SKU Code">
+                                                <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                                <input type="hidden" id="txtSKU" name="product_Dispatch.SKU" class="auto-complete-label" />
 
-                                </div>
+                                            </div>
+                                        </div>
+                                    }}
+
                             </div>
-                                }}
+
+                        </div>
+
+
+                        <div class="col-md-3">
+
+                            <div class="block">
+
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Product Quantity</span>
 
                                     <input type="text" class="form-control input-sm" onblur="AddQuantity();" name="product_Dispatch.Balance_Quantitya" id="txtBalance_Quantitya" value="@Model.product_Dispatch.Balance_Quantitya" readonly />
-                                  
+
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control input-sm" name="product_Dispatch.Quantity" id="txtDispatch_Quantity" placeholder="Enter Dispatch Quantity." value="0" style="display:none" />
                                 </div>
 
+
+
                             </div>
 
                         </div>
+                        
+                        <div class="col-md-3">
 
-
-                        <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 200px;">
-                           
                             <div class="block">
-                                @*<div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Dispatch Date</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="mm-dd-yyyy">
-                                        <input type="text" class="form-control datepicker" id="txtDispatch_Date" placeholder="Enter Dispatch Date." />
-                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                    </div>
-                                </div>*@
-                                @{
-                                    LoginInfo Cookies = new LoginInfo();
-                                    Cookies = Utility.Get_Login_User("MyLeoLoginInfo", "MyLeoToken", "Branch_Ids");
-
-                                    <input type="hidden" id="hdnBranchIDs" value="@Cookies.Branch_Ids" />
-                                }
-                                @if (Model.product_Dispatch.Branch_Id==0)
-                                {
-                               
-
-
-                                    <div class="form-group auto-complete">
-                                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch</span>
-                                        <div id="Branch" class="input-group">
-                                            <input type="text" class="form-control invoice-filter autocomplete-text lookup-text"  id="txt_Branch_Name" placeholder="Enter Branch to search"  data-table="Assign_Branches" data-col="Branch_ID,Branch_Name" data-headernames="Branch" data-field="Branch_Id" data-param="hdnBranchIDs">
-                                            <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                            <input type="hidden" id="hdn_Branch_Id" name="product_Dispatch.Branch_Id" class="auto-complete-value" />
-                                            <input type="hidden" id="hdnBranchName"   class="auto-complete-label" />
-                                        </div>
-                                    </div>
-                                }
-                                else
-                                {
-                                <input type="hidden" class="form-control input-sm" id="hdn_Branch_Id" name="product_Dispatch.Branch_Id" value="@Model.product_Dispatch.Branch_Id">
-                                }
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Barcode</span>
-                                    <input type="text" class="form-control input-sm" name="product_Dispatch.Barcode" id="txtBarcode" placeholder="Barcode"  autofocus />
+                                    <input type="text" class="form-control input-sm" name="product_Dispatch.Barcode" id="txtBarcode" placeholder="Barcode" autofocus />
                                 </div>
                             </div>
-
                         </div>
 
                     </div>
 
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-12" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 50px;">
                             <div class="block">
                                 <div class="block" style="margin-top:0px; ">
                                     <div class="btn-group">
-                                        @*<a href="javascript:AddProductDispatch();" id="btnProductDispatch" class="btn btn-success active">
+                                        <a href="javascript:AddProductDispatch();" id="btnProductDispatch" class="btn btn-success active">
                                             <i class="mdi mdi-plus"></i>
                                             Add
-                                        </a>*@
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="row">
-                        <div class="table-responsive" style="width:100%; margin: 0px 0;">
+                        <div class="table-responsive" style="width:100%; margin: 0px 0; overflow-y: scroll; height:300px;">
                             <table class="table table-bordered table-hover" id="tblProduct_Dispatch">
                                 <thead>
                                     <tr>
